# meco

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  sample.ipynb  turbo.json
apps/api/: README.md  go.mod  go.sum  package.json  pyproject.toml  results_log.txt
apps/api/app/: main.py  models.py
apps/api/app/controllers/: optimization.py
apps/api/app/controllers/optimization/: python.py  test.json
apps/api/app/controllers/optimization/function/: evo.py  python.py  utils.py
apps/api/app/database/: client.py
apps/api/app/routes/: optimize.py
apps/api/app/routes/optimize/: __init__.py  route.py
apps/api/app/routes/optimize/function/: route.py
apps/api/app/routes/query/: route.py
apps/api/app/services/: publisher.py
apps/api/app/src/evolution/: logger.py  node.py
apps/api/app/src/evolution/function/: evo.py  node.py  tree.py
apps/api/app/src/optimization/: python.py
apps/api/cmd/api/: main.go
apps/api/docker/: Dockerfile  requirements.txt
apps/api/internal/handler/: add_cell.go  container.go  create_script.go  edit_script.go  exec.go  exec_container.go  install_package.go  kernel.go  package.go  read_notebook.go  read_script.go  script.go  start_container.go  stop_container.go
apps/api/internal/model/: add_cell.go  container.go  create_container.go  create_script.go  edit_script.go  exec.go  kernel.go  package.go  read_notebook.go  read_script.go  script.go  stop_container.go
apps/api/internal/utils/: copy.go  exec.go
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20250323165358_new/: migration.sql
apps/api/prisma/migrations/20250323170744_nullable_tree/: migration.sql
apps/api/tests/: test_meco.py
apps/consumer/: Dockerfile  consumer.py  package.json
apps/consumer/optimization/: function.py
apps/consumer/output/: baseline_1.json  baseline_10.json  baseline_11.json  baseline_12.json  baseline_13.json  baseline_14.json  baseline_15.json  baseline_16.json  baseline_17.json  baseline_18.json  baseline_19.json  baseline_2.json  baseline_20.json  baseline_21.json  baseline_22.json  baseline_23.json  baseline_24.json  baseline_25.json  baseline_26.json  baseline_27.json  baseline_29.json  baseline_3.json  baseline_30.json  baseline_31.json  baseline_32.json  baseline_33.json  baseline_34.json  baseline_35.json  baseline_36.json  baseline_37.json  baseline_38.json  baseline_39.json  baseline_4.json  baseline_40.json  baseline_41.json  baseline_42.json  baseline_43.json  baseline_44.json  baseline_45.json  baseline_46.json  (+20 more)
apps/web/: jest.config.cjs  middleware.ts  package.json  tsconfig.json
apps/web/__tests__/: api.integration.test.ts  create_script.test.ts  edit_script.test.ts  exec_container.test.ts  install_package.test.ts  kernel.test.ts  kernel_execute.test.ts  read_notebook.test.ts  read_script.test.ts  start_container.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: auth-center.tsx  flowchart.tsx  navbar.tsx  theme-toggle.tsx
apps/web/config/: auth.config.ts
apps/web/contexts/: theme-context.tsx
apps/web/lib/: auth.ts
apps/web/prisma/: schema.prisma
docker/: Dockerfile  docker-compose.yml  ws_connect.py  ws_execute.py
scripts/: send.sh  start_ollama.sh
(+135 files in other folders)
