[tool.poetry]
name = "meco"
version = "0.1.0"
description = "MECO Monorepo"
authors = ["Mark Shteyn <markshteyn1@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

optimizer = { path = "packages/optimizer", develop = true }
runner = { path = "packages/runner", develop = true }

uvicorn = "^0.34.0"
fastapi = "^0.115.8"
requests = "^2.32.3"
pydantic = "^2.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
