[tool.poetry]
name = "meco"
version = "0.1.0"
description = "MECO Monorepo"
authors = ["Mark Shteyn <markshteyn1@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

optimizer = { path = "packages/optimizer", develop = true }
runner = { path = "packages/runner", develop = true }
parser = { path = "packages/parser", develop = true }

uvicorn = "^0.34.0"
fastapi = "^0.115.8"
requests = "^2.32.3"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.25.3"
redis = "^5.2.1"
prisma = "^0.15.0"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
